--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "inter";
-  src: url(../public/fonts/Inter-Italic-VariableFont_opsz\wght.ttf);
+  src: url(/fonts/Inter-Italic-VariableFont_opsz\wght.ttf);
 }
 
 .hide-scrollbar::-webkit-scrollbar {
